--- a/boards/sltb001a/Makefile.include
+++ b/boards/sltb001a/Makefile.include
@@ -1,6 +1,7 @@
 # define the cpu used by SLTB001A
 export CPU = efr32mg1p
 export CPU_MODEL = efr32mg1p132f256gm48
+export DBG = arm-none-eabi-gdb
 
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyACM0
